@@ -2,12 +2,13 @@ package uk.gov.hmcts.reform.prl.services;
 
 
 import feign.FeignException;
+import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.cache.concurrent.ConcurrentMapCacheManager;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.ResponseEntity;
 import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
@@ -47,9 +48,6 @@ import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.HEARINGCHANNEL;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.HEARINGTYPE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.IS_HEARINGCHILDREQUIRED_N;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.LEGALOFFICE;
-import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.RD_STAFF_FIRST_PAGE;
-import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.RD_STAFF_PAGE_SIZE;
-import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.RD_STAFF_SECOND_PAGE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.RD_STAFF_TOTAL_RECORDS_HEADER;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SERVICENAME;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SERVICE_ID;
@@ -62,9 +60,9 @@ import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.VIDEOPLATFORM;
 public class RefDataUserServiceTest {
 
     public static final String FLAG_TYPE = "PARTY";
-    @InjectMocks
     RefDataUserService refDataUserService;
 
+    StaffRefDataService staffRefDataService;
     @Mock
     private AuthTokenGenerator authTokenGenerator;
 
@@ -92,33 +90,32 @@ public class RefDataUserServiceTest {
     private static final String AUTH_TOKEN = "Bearer TestAuthToken";
     private static final String S2S_TOKEN = "Bearer TestAuthToken";
 
+    @Before
+    public void setUp() {
+        staffRefDataService = new StaffRefDataService(
+            authTokenGenerator,
+            staffResponseDetailsApi,
+            idamClient,
+            new ConcurrentMapCacheManager(RefDataUserService.STAFF_REF_DATA_CACHE)
+        );
+        refDataUserService = new RefDataUserService(
+            authTokenGenerator,
+            staffRefDataService,
+            judicialUserDetailsApi,
+            idamClient,
+            commonDataRefApi,
+            launchDarklyClient
+        );
+    }
 
     @Test
     public void testGetStaffDetailssWithNullStaffData() {
-        when(staffResponseDetailsApi.getAllStaffResponseDetails(
-            idamClient.getAccessToken(refDataIdamUsername,refDataIdamPassword),
-            authTokenGenerator.generate(),
-            SERVICENAME,
-            STAFFSORTCOLUMN,
-            STAFFORDERASC,
-            RD_STAFF_PAGE_SIZE,
-            RD_STAFF_FIRST_PAGE
-        )).thenReturn(null);
         List<DynamicListElement> staffDetails = refDataUserService.getLegalAdvisorList();
-        assertNull(staffDetails.get(0).getCode());
+        assertNull(staffDetails.getFirst().getCode());
     }
 
     @Test
     public void testStaffDynamicListWithNullStaffData() {
-        when(staffResponseDetailsApi.getAllStaffResponseDetails(
-            idamClient.getAccessToken(refDataIdamUsername,refDataIdamPassword),
-            authTokenGenerator.generate(),
-            SERVICENAME,
-            STAFFSORTCOLUMN,
-            STAFFORDERASC,
-            RD_STAFF_PAGE_SIZE,
-            RD_STAFF_FIRST_PAGE
-        )).thenReturn(null);
         StaffResponseToDynamicListElementFilter filter = mock(StaffResponseToDynamicListElementFilter.class);
         DynamicList staffDetails = refDataUserService.getStaffDynamicList(filter);
         assertTrue(staffDetails.getListItems().isEmpty());
@@ -127,32 +124,12 @@ public class RefDataUserServiceTest {
 
     @Test
     public void testGetStaffDetailsWithException() {
-        when(staffResponseDetailsApi.getAllStaffResponseDetails(
-            idamClient.getAccessToken(refDataIdamUsername,refDataIdamPassword),
-            authTokenGenerator.generate(),
-            SERVICENAME,
-            STAFFSORTCOLUMN,
-            STAFFORDERASC,
-            RD_STAFF_PAGE_SIZE,
-            RD_STAFF_FIRST_PAGE
-        ))
-            .thenThrow(FeignException.class);
         List<DynamicListElement> legalAdvisor = refDataUserService.getLegalAdvisorList();
-        assertNull(legalAdvisor.get(0).getCode());
+        assertNull(legalAdvisor.getFirst().getCode());
     }
 
     @Test
     public void testStaffDynamicListWithException() {
-        when(staffResponseDetailsApi.getAllStaffResponseDetails(
-            idamClient.getAccessToken(refDataIdamUsername,refDataIdamPassword),
-            authTokenGenerator.generate(),
-            SERVICENAME,
-            STAFFSORTCOLUMN,
-            STAFFORDERASC,
-            RD_STAFF_PAGE_SIZE,
-            RD_STAFF_FIRST_PAGE
-        )).thenThrow(FeignException.class);
-
         StaffResponseToDynamicListElementFilter filter = mock(StaffResponseToDynamicListElementFilter.class);
         DynamicList staffDetails = refDataUserService.getStaffDynamicList(filter);
         assertTrue(staffDetails.getListItems().isEmpty());
@@ -182,13 +159,14 @@ public class RefDataUserServiceTest {
             SERVICENAME,
             STAFFSORTCOLUMN,
             STAFFORDERASC,
-            RD_STAFF_PAGE_SIZE,
-            RD_STAFF_FIRST_PAGE
+            Integer.MAX_VALUE,
+            0
         )).thenReturn(staffResponse);
 
+        staffRefDataService.refreshStaffDetailsCache();
         List<DynamicListElement> legalAdvisorList = refDataUserService.getLegalAdvisorList();
-        assertNotNull(legalAdvisorList.get(0).getCode());
-        assertEquals("David(test2@com)",legalAdvisorList.get(0).getCode());
+        assertNotNull(legalAdvisorList.getFirst().getCode());
+        assertEquals("David(test2@com)",legalAdvisorList.getFirst().getCode());
 
     }
 
@@ -223,8 +201,8 @@ public class RefDataUserServiceTest {
             SERVICENAME,
             STAFFSORTCOLUMN,
             STAFFORDERASC,
-            RD_STAFF_PAGE_SIZE,
-            RD_STAFF_FIRST_PAGE
+            Integer.MAX_VALUE,
+            0
         )).thenReturn(staffResponse);
 
         StaffResponseToDynamicListElementFilter filter = mock(StaffResponseToDynamicListElementFilter.class);
@@ -232,6 +210,7 @@ public class RefDataUserServiceTest {
         when(filter.filter(staffResponse1)).thenReturn(Optional.of(mockDynamicListElement));
         when(filter.filter(staffResponse2)).thenReturn(Optional.empty());
 
+        staffRefDataService.refreshStaffDetailsCache();
         DynamicList staffDetails = refDataUserService.getStaffDynamicList(filter);
         assertEquals(1, staffDetails.getListItems().size());
         assertEquals(mockDynamicListElement, staffDetails.getListItems().getFirst());
@@ -256,7 +235,7 @@ public class RefDataUserServiceTest {
         )).thenReturn(listOfJudges);
         List<JudicialUsersApiResponse> expectedRespose = refDataUserService.getAllJudicialUserDetails(judicialUsersApiRequest);
         assertNotNull(expectedRespose);
-        assertEquals("lastName1",expectedRespose.get(0).getSurname());
+        assertEquals("lastName1",expectedRespose.getFirst().getSurname());
     }
 
     @Test
@@ -277,7 +256,7 @@ public class RefDataUserServiceTest {
         )).thenReturn(listOfJudges);
         List<JudicialUsersApiResponse> expectedRespose = refDataUserService.getAllJudicialUserDetails(judicialUsersApiRequest);
         assertNotNull(expectedRespose);
-        assertEquals("lastName1",expectedRespose.get(0).getSurname());
+        assertEquals("lastName1",expectedRespose.getFirst().getSurname());
     }
 
     @Test
@@ -302,7 +281,7 @@ public class RefDataUserServiceTest {
             IS_HEARINGCHILDREQUIRED_N
         );
         assertNotNull(commonResponse);
-        assertEquals("Celebration hearing",commonResponse.getCategoryValues().get(0).getValueEn());
+        assertEquals("Celebration hearing",commonResponse.getCategoryValues().getFirst().getValueEn());
     }
 
     @Test
@@ -325,7 +304,7 @@ public class RefDataUserServiceTest {
             AUTH_TOKEN,
             FLAG_TYPE
         );
-        assertEquals("ABCD",caseFlag.getFlags().get(0).getFlagDetails().get(0).getFlagCode());
+        assertEquals("ABCD",caseFlag.getFlags().getFirst().getFlagDetails().getFirst().getFlagCode());
 
     }
 
@@ -373,8 +352,8 @@ public class RefDataUserServiceTest {
             IS_HEARINGCHILDREQUIRED_N
         );
         assertNotNull(commonResponse);
-        assertEquals("ONPPRS",commonResponse.getCategoryValues().get(0).getKey());
-        assertEquals("On the Papers",commonResponse.getCategoryValues().get(0).getValueEn());
+        assertEquals("ONPPRS",commonResponse.getCategoryValues().getFirst().getKey());
+        assertEquals("On the Papers",commonResponse.getCategoryValues().getFirst().getValueEn());
     }
 
     @Test
@@ -391,8 +370,8 @@ public class RefDataUserServiceTest {
         List<DynamicListElement> expectedResponse = refDataUserService.filterCategoryValuesByCategoryId(
             commonDataResponse,
             HEARINGTYPE);
-        assertEquals("AINTER",expectedResponse.get(0).getCode());
-        assertEquals("AIN Person",expectedResponse.get(0).getLabel());
+        assertEquals("AINTER",expectedResponse.getFirst().getCode());
+        assertEquals("AIN Person",expectedResponse.getFirst().getLabel());
 
     }
 
@@ -401,8 +380,8 @@ public class RefDataUserServiceTest {
         List<DynamicListElement> expectedResponse = refDataUserService.filterCategoryValuesByCategoryId(
             null,
             HEARINGTYPE);
-        assertEquals(null,expectedResponse.get(0).getCode());
-        assertEquals(null,expectedResponse.get(0).getLabel());
+        assertEquals(null,expectedResponse.getFirst().getCode());
+        assertEquals(null,expectedResponse.getFirst().getLabel());
 
     }
 
@@ -425,8 +404,8 @@ public class RefDataUserServiceTest {
         List<DynamicListElement> expectedResponse = refDataUserService.filterCategorySubValuesByCategoryId(
             commonDataResponse,
             VIDEOPLATFORM);
-        assertEquals("VIDPVL",expectedResponse.get(0).getCode());
-        assertEquals("Prison Video",expectedResponse.get(0).getLabel());
+        assertEquals("VIDPVL",expectedResponse.getFirst().getCode());
+        assertEquals("Prison Video",expectedResponse.getFirst().getLabel());
         assertEquals("VIDCVP",expectedResponse.get(1).getCode());
         assertEquals("Video - CVP",expectedResponse.get(1).getLabel());
         assertEquals("VIDOTHER",expectedResponse.get(2).getCode());
@@ -441,8 +420,8 @@ public class RefDataUserServiceTest {
         List<DynamicListElement> expectedResponse = refDataUserService.filterCategorySubValuesByCategoryId(
             null,
             VIDEOPLATFORM);
-        assertEquals(null,expectedResponse.get(0).getCode());
-        assertEquals(null,expectedResponse.get(0).getLabel());
+        assertEquals(null,expectedResponse.getFirst().getCode());
+        assertEquals(null,expectedResponse.getFirst().getLabel());
 
     }
 
@@ -467,14 +446,15 @@ public class RefDataUserServiceTest {
             SERVICENAME,
             STAFFSORTCOLUMN,
             STAFFORDERASC,
-            RD_STAFF_PAGE_SIZE,
-            RD_STAFF_FIRST_PAGE
+            Integer.MAX_VALUE,
+            0
         )).thenReturn(staffResponseFirstPage);
 
+        staffRefDataService.refreshStaffDetailsCache();
         List<DynamicListElement> legalAdvisorList = refDataUserService.getLegalAdvisorList();
 
-        assertNotNull(legalAdvisorList.get(0).getCode());
-        assertEquals("David(test2@com)",legalAdvisorList.get(0).getCode());
+        assertNotNull(legalAdvisorList.getFirst().getCode());
+        assertEquals("David(test2@com)",legalAdvisorList.getFirst().getCode());
         assertEquals(1, legalAdvisorList.size());
     }
 
@@ -498,14 +478,15 @@ public class RefDataUserServiceTest {
             SERVICENAME,
             STAFFSORTCOLUMN,
             STAFFORDERASC,
-            RD_STAFF_PAGE_SIZE,
-            RD_STAFF_FIRST_PAGE
+            Integer.MAX_VALUE,
+            0
         )).thenReturn(staffResponseFirstPage);
 
         StaffResponseToDynamicListElementFilter filter = mock(StaffResponseToDynamicListElementFilter.class);
         DynamicListElement mockDynamicListElement = mock(DynamicListElement.class);
         when(filter.filter(staffResponse)).thenReturn(Optional.of(mockDynamicListElement));
 
+        staffRefDataService.refreshStaffDetailsCache();
         DynamicList staffDetails = refDataUserService.getStaffDynamicList(filter);
 
         assertEquals(1, staffDetails.getListItems().size());
@@ -534,34 +515,31 @@ public class RefDataUserServiceTest {
             SERVICENAME,
             STAFFSORTCOLUMN,
             STAFFORDERASC,
-            RD_STAFF_PAGE_SIZE,
-            RD_STAFF_FIRST_PAGE
+            Integer.MAX_VALUE,
+            0
         )).thenReturn(staffResponseFirstPage);
 
+        staffRefDataService.refreshStaffDetailsCache();
         List<DynamicListElement> legalAdvisorList = refDataUserService.getLegalAdvisorList();
 
-        assertNotNull(legalAdvisorList.get(0).getCode());
-        assertEquals("David(test2@com)",legalAdvisorList.get(0).getCode());
+        assertNotNull(legalAdvisorList.getFirst().getCode());
+        assertEquals("David(test2@com)",legalAdvisorList.getFirst().getCode());
         assertEquals(1, legalAdvisorList.size());
     }
 
     @Test
-    public void testGetStaffDynamicListDataSizeGtPageSize() {
+    public void testGetStaffDynamicListWithMultipleStaff() {
         StaffProfile staffProfile1 = StaffProfile.builder().userType(LEGALOFFICE)
             .lastName("David").emailId("test2@com").build();
         StaffProfile staffProfile2 = StaffProfile.builder().userType(LEGALOFFICE)
             .lastName("John").emailId("test1@com").build();
         StaffResponse staffResponse1 = StaffResponse.builder().ccdServiceName("PRIVATELAW").staffProfile(staffProfile1).build();
         StaffResponse staffResponse2 = StaffResponse.builder().ccdServiceName("PRIVATELAW").staffProfile(staffProfile2).build();
-        List<StaffResponse> listOfStaffFirstPage = new ArrayList<>();
-        List<StaffResponse> listOfStaffSecondPage = new ArrayList<>();
-        listOfStaffFirstPage.add(staffResponse1);
-        listOfStaffSecondPage.add(staffResponse2);
-        //add a response header for total entries
-        HttpHeaders headers = new HttpHeaders();
-        headers.add(RD_STAFF_TOTAL_RECORDS_HEADER, String.valueOf(RD_STAFF_PAGE_SIZE + 10));
-        ResponseEntity<List<StaffResponse>> staffResponseFirstPage = ResponseEntity.ok().headers(headers).body(listOfStaffFirstPage);
-        ResponseEntity<List<StaffResponse>> staffResponseSecondPage = ResponseEntity.ok().headers(headers).body(listOfStaffSecondPage);
+        List<StaffResponse> allStaff = new ArrayList<>();
+        allStaff.add(staffResponse1);
+        allStaff.add(staffResponse2);
+
+        ResponseEntity<List<StaffResponse>> staffResponseEntity = ResponseEntity.ok().body(allStaff);
 
         when(idamClient.getAccessToken(refDataIdamUsername,refDataIdamPassword)).thenReturn(AUTH_TOKEN);
         when(authTokenGenerator.generate()).thenReturn("s2sToken");
@@ -571,18 +549,9 @@ public class RefDataUserServiceTest {
             SERVICENAME,
             STAFFSORTCOLUMN,
             STAFFORDERASC,
-            RD_STAFF_PAGE_SIZE,
-            RD_STAFF_FIRST_PAGE
-        )).thenReturn(staffResponseFirstPage);
-        when(staffResponseDetailsApi.getAllStaffResponseDetails(
-            idamClient.getAccessToken(refDataIdamUsername,refDataIdamPassword),
-            authTokenGenerator.generate(),
-            SERVICENAME,
-            STAFFSORTCOLUMN,
-            STAFFORDERASC,
-            RD_STAFF_PAGE_SIZE,
-            RD_STAFF_SECOND_PAGE
-        )).thenReturn(staffResponseSecondPage);
+            Integer.MAX_VALUE,
+            0
+        )).thenReturn(staffResponseEntity);
 
         StaffResponseToDynamicListElementFilter filter = mock(StaffResponseToDynamicListElementFilter.class);
         DynamicListElement mockDynamicListElement1 = mock(DynamicListElement.class);
@@ -590,6 +559,7 @@ public class RefDataUserServiceTest {
         when(filter.filter(staffResponse1)).thenReturn(Optional.of(mockDynamicListElement1));
         when(filter.filter(staffResponse2)).thenReturn(Optional.of(mockDynamicListElement2));
 
+        staffRefDataService.refreshStaffDetailsCache();
         DynamicList staffDetails = refDataUserService.getStaffDynamicList(filter);
 
         assertEquals(2, staffDetails.getListItems().size());
@@ -638,8 +608,8 @@ public class RefDataUserServiceTest {
 
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals("Smith", result.get(0).getSurname());
-        assertEquals(sidamId, result.get(0).getSidamId());
+        assertEquals("Smith", result.getFirst().getSurname());
+        assertEquals(sidamId, result.getFirst().getSidamId());
     }
 
     @Test
@@ -683,4 +653,3 @@ public class RefDataUserServiceTest {
         assertNull(result);
     }
 }
-
